# florentino-bench

./: Makefile.am  README.md  configure.ac
include/: Makefile.am
include/florentino/: benchmark-runner.h  benchmark.h  clock.h  logstream.h  memory.h  option-parser.h
m4/: ac_check_clocks.m4  ac_check_opencl.m4
src/: Makefile.am
src/florentino/: Makefile.am  benchmark-runner.cpp  benchmark.cpp  option-parser.cpp
src/stream/: Makefile.am  benchmarks.cpp  benchmarks.h  cpu-stream.cpp  cpu-stream.h  florentino-stream-kernels.cl  florentino-stream.cpp  ocl-stream.cpp  ocl-stream.h
